--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,12 @@
 body, html {
     height: 100%;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    
 
   }
   .bg {
     /* The image used */
-    background-image: url("../images/parasites.png");
+    background-image: url("../images/michael.png");
   
     /* Full height */
     height: 100%;
@@ -15,4 +16,3 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
   }
-  
